[package]
name = "gmsv_rhttp"
version = "1.1.0"
edition = "2021"
publish = false

[lib]
name = "gmsv_rhttp"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "thin"
strip = true

[dependencies]
gmod = { version = "15.0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "stream", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
futures-util = "0.3"
serde_urlencoded = "0.7"
